# todolist-cli

./: Cargo.toml  README.md  create_bin.sh  create_linux_bin.sh  deploy.sh
src/: main.rs  todolist.rs
src/utils/: date.rs  mod.rs  todolist.rs
