[package]
name = "todo"
version = "0.1.0"
edition = "2021"
authors = ["Ayhan Eyikan <ayhaneyikan@outlook.com>"]
description = "A friendly CLI for creating and modifying todo-lists"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
clap = { version = "4.2.7", features = ["derive"] }
bincode = "1.3.3"
regex = "1.8.1"
home = "0.5.5"
